--- a/TrabalhoUemura/app/templates/auth/login.html
+++ b/TrabalhoUemura/app/templates/auth/login.html
@@ -78,7 +78,7 @@
 
         <div class="container">
             <h2>Login</h2>
-            <form action="{% url 'login' %}}" method="POST">
+            <form action="{% url 'login' %}" method="POST">
                 {% csrf_token %}
                 <label for="email">E-mail</label>
                 <input type="text" id="email" name="email" placeholder="Digite seu e-mail" required>
