--- a/TrabalhoUemura/app/templates/auth/login.html
+++ b/TrabalhoUemura/app/templates/auth/login.html
@@ -80,8 +80,8 @@
             <h2>Login</h2>
             <form action="{% url 'login' %}" method="POST">
                 {% csrf_token %}
-                <label for="email">E-mail</label>
-                <input type="text" id="email" name="email" placeholder="Digite seu e-mail" required>
+                <label for="nome">Nome de Usuário</label>
+                <input type="text" id="nome" name="nome" placeholder="Digite seu nome de usuário" required>
 
                 <label for="senha">Senha</label>
                 <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
